# BOLDnet

./: .gitignore  README.md  pyproject.toml
boldnet/: boldnet.py  config.py  pipeline.py
